# tactik

./: .gitignore  manifest.in.txt  pyproject.toml  readme.md
examples/: AWITEST.csv  Example Aircraft Maintenance Data.ipynb  Example BBC Text Corpus.ipynb  Example Security Data.ipynb  mock_security_incidents.csv
src/tactik/: __init__.py  clustering_pipeline.py  clustering_tuning.py  embeddings.py  preprocessing.py  topic_extraction.py  utilities.py  visualization.py
tests/: test_clustering_pipeline.py  test_clustering_tuning.py  test_embeddings.py  test_preprocessing.py  test_topic_extraction.py  test_utilities.py
